<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.edit.EditOverviewFragment">
    
    <ch.epfl.qedit.view.util.ListEditView
        android:id="@+id/question_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/add_question_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:dragAndDrop="true"
        android:scrollbars="vertical"/>

    <TextView
        android:id="@+id/empty_list_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:text="@string/empty_question_list_hint_text"
        android:padding="@dimen/regular_padding"

        app:layout_constraintBottom_toTopOf="@+id/add_question_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/add_question_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:padding="@dimen/regular_padding"
        android:layout_margin="@dimen/regular_padding"
        android:src="@drawable/ic_add_black"
        android:tint="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/question_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="TODO" />

</androidx.constraintlayout.widget.ConstraintLayout>