<?xml version="1.0" encoding="utf-8"?>

<!-- English -->

<!-- Note: this default string resource is for English. In fact, if the language of the system does not
     have an associated string resource, this default string resource is loaded and therefore the
     app is in English.
     -->
<!-- To insert a string in the application:
     getResources().getString(R.string.<string_name>)
     or
     getResources().getStringArray(R.array.<string_array_name>)[<position>]
     for arrays. In the tests:
     <the activity rule>.getActivity().getString(R.string.<string_name>)
     -->
<!-- To access the current language:
     Locale.getDefault().getLanguage())
     will return the language code (e.g. "en" for English, "fr" for French) -->

<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <!-- Navigation drawer compulsory strings-->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <!-- App and logo -->
    <string name="app_name" translatable="false"><b>QED<font color="#FF0000" tools:ignore="UnusedResources">it</font></b></string>
    <string name="qedit_logo_description">QEDit Logo</string>

    <!-- Language selection -->
    <string-array name="languages_list" translatable="false">
        <!-- This list of languages will be the available languages that the user can select." -->
        <item>English</item>
        <item>Français</item>
        <!-- Add new language here -->
    </string-array>
    <string-array name="languages_codes" translatable="false">
        <!-- Important: language_codes must be in the same order as languages_list." -->
        <item>en</item>
        <item>fr</item>
        <!-- Add new language code here -->
    </string-array>
    <string name="language_changed">Language changed to</string>

    <!-- Log in, log out, sign up -->
    <string name="title_activity_log_in">Log in</string>
    <string name="title_activity_sign_up">Sign up</string>

    <string name="log_in_button_text">Log in</string>
    <string name="log_in_action_label">Log in</string>
    <string name="log_out">Log out</string>
    <string name="sign_up_button_text">Sign up</string>
    <string name="sign_up_action_label">Sign up</string>

    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_confirmation">Confirm password</string>

    <string name="input_cannot_be_empty">Cannot be empty</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Password must be at least 6 characters</string>
    <string name="invalid_name">Invalid name</string>
    <string name="invalid_password_confirmation">Passwords are not identical</string>

    <string name="log_in_instead">I already have an account -> Log in</string>
    <string name="sign_up_instead">I don\'t have an account -> Sign up</string>

    <string name="log_in_fail">Log in failed. Please check that your email and password are correct.</string>
    <string name="sign_up_success">Signed up successfully</string>
    <string name="sign_up_fail">Sign up failed</string>
    <string name="log_out_success">Logged out successfully</string>

    <!-- Home -->
    <string name="title_activity_home">Home</string>
    <string name="welcome">Welcome,</string>

    <string name="display_stats">Display statistics</string>
    <string name="hide_stats">Hide statistics</string>
    <string name="score">QEDit SCORE</string>
    <string name="successes">NUMBER OF QUIZZES SUCCEEDED</string>
    <string name="attempts">TOTAL NUMBER OF ATTEMPTS</string>
    <string name="quizzes">My quizzes</string>

    <!-- Menu -->
    <string name="menu_overview">Overview</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_previous">Previous</string>
    <string name="menu_next">Next</string>
    <string name="menu_done">Save and Exit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>

    <!-- Burger Menu -->
    <string name="menu_home">HOME</string>
    <string name="menu_qr">QR CODE</string>
    <string name="menu_quiz_list">MY QUIZZES</string>
    <string name="menu_person">MY ACCOUNT</string>
    <string name="menu_search">ONLINE QUIZZES</string>
    <string name="menu_settings">SETTINGS</string>

    <!-- Quiz -->
    <string name="title_activity_edit_quiz">Edit</string>

    <!-- Treasure hunt -->
    <string name="title_activity_treasure_hunt">Treasure Hunt</string>
    <string name="question_locator_distance">Distance to the next question :</string>
    <string name="question_locator_bearing">Bearing to the next question (from the north) :</string>
    <string name="question_locator_error">Cannot locate your phone</string>
    <string name="enable_location">Grant location permission</string>
    <string name="question_locator_found">You have found the question!</string>
    <string name="question_locator_answer">Answer the question</string>
    <string name="treasure_hunt_explanation">You have to locate the first question to start the quiz</string>
    <string name="treasure_hunt_start">Start the treasure hunt</string>
    <string name="treasure_hunt_confirm_next_question">Are you sure that you finished this question ? You will not be able to come back to it.</string>
    <string name="question_locator_move">Move to next question</string>

    <!-- Edit Settings -->
    <string name="edit_dialog_title_settings">Settings</string>
    <string name="edit_quiz_title">Title</string>
    <string name="button_start_editing_message">Start editing</string>

    <!-- Edit -->
    <string name="dup_quiz_name_error">A quiz with the same name already exists</string>
    <string name="empty_quiz_name_error">Please enter the name of your quiz</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_quiz_message">Enter the name of your quiz</string>
    <string name="edit_title">Rename</string>
    <string name="warning_delete_quiz">Are you sure you want to delete this quiz? It will delete all questions from this quiz.</string>
    <string name="warning_delete_question">Are you sure you want to delete this question?</string>
    <string name="warning_exit_edition">Are you sure you want to cancel the edition of the quiz? The changes you made will be discarded.</string>
    <string name="warning_done_edition">Are you sure you want to stop the edition of the quiz and save the changes?</string>
    <string name="warning_save_empty_quiz">You can\'t save an empty quiz. At least add one question to it.</string>
    <string name="add_quiz">Add</string>
    <string name="empty_question_list_hint_text">Add a question</string>

    <!-- Edit Question -->
    <string name="edit_question_title">Enter the title of the question here.</string>
    <string name="cannot_be_empty">Cannot be empty.</string>
    <string name="edit_question_text">Enter the text of the question here.</string>

    <!-- Edit Answer -->
    <string name="choose_answer_format">Choose a type of answer among TEXT and NUMBER.</string>
    <string name="correct_answer_specified"><b>A correct answer has been specified <font color="#00FF00">✔</font></b></string>

    <!-- Edit Field -->
    <string name="treasure_hunt">Treasure Hunt</string>
    <string name="edit_field_title">Solution</string>
    <string name="hint_preview">The hint will be</string>
    <string name="enter_solution">Enter here the solution of this question.</string>
    <string name="enter_pre_filled">Enter here the text of this pre-filled field.</string>
    <string name="check_box_sign">Can be negative</string>
    <string name="check_box_decimal">Can be decimal</string>
    <!-- Type selection -->
    <string name="select_field_type">Type of this solution</string>
    <string-array name="field_types_list">
        <item>Number</item>
        <item>Text</item>
        <item>Pre-filled</item>
    </string-array>

    <!-- Map -->
    <string name="title_activity_edit_maps">Map</string>
    <string name="your_location">Your location</string>

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="change_language">Language of the application</string>
    <string name="save_settings">Save</string>

    <!-- Miscellaneous -->
    <string name="exclamation_point">!</string>
    <string name="database_error">An error occurred connecting to the database</string>
    <string name="card_icon">card icon</string>
    <string name="database_upload_failed">The quiz could not be uploaded to the database</string>
    <string name="database_upload_successful">The quiz was successfully uploaded to the database</string>

    <string name="correct_answers">Correct answers :</string>

</resources>
