<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/small_margin" >

    <include layout="@android:layout/simple_list_item_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical" />

    <ImageButton
        android:id="@+id/list_item_three_dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:src="@drawable/ic_more_horiz_black_24dp"
        android:background="@color/transparent" />
</FrameLayout>
